stylesheet.css
html, body, header, nav, h1, a,
ul, li, strong, main, button, i,
section, img, div, h2, h3, p, form,
label, input, textarea,
span, article, footer, time, small {
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  font: inherit;
  color: black;
  text-align: inherit;
  text-decoration: inherit;
  vertical-align: inherit;
  box-sizing: inherit;
  background: transparent;
  font-family: 'Roboto', Helvetica, Arial, sans-serif;
}

ul, li {
  list-style: none;
}

input[type="submit"],
input[type="radio"],
button {
  cursor: pointer;
}

.canvas-div {
  width: 100%;
  padding-bottom: 70px;
  background-size: cover;
  background: green;
}

nav {
  width: 560px;
  margin: auto;
  padding: 20px 0 10px 0;
  display: flex;
  justify-content: space-between;
}

.buttons-div {
  display: flex;
  /* flex-direction: column; */
  justify-content: space-between;
  align-items: center;
}

.buttons-div > button {
  height: 20px;
  background: #aaa;
  border: 1px solid rgba(0,0,0,.12);
  border-radius: 5px;
  font-size: 14px;
  padding: 4px 6px;
  margin-left: 5px;
}

.buttons-div > button:hover {
  background: #a6a6a6;
}

#about-button {
  background: none;
  border: none;
  margin: 0;
}

#about-button > i:hover {
  color: #004d66;
}

#about-button > i {
  color: #006080;
}

h1 {
  font-family: 'Bungee','Roboto Slab';
  font-size: 35px;
  margin-left: 20px;
}

h1 > span {
  font-size: 14px;
  color: #004d66;
}

.modal-background {
  display: none;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgb(0,0,0,0.5);
}

.active-modal {
  display: flex;
  justify-content: center;
  align-items: center;
}

#canvas{
  margin: auto;
  display: block;
  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
  border-radius: 15px;
}

#blackJumps{
  left: 300px;
  position: fixed;
  display: block;
}

#whiteJumps{
  right: 300px;
  position: fixed;
  display: block;
}

#setup-form {
  margin: auto;
  padding: 20px 10px;
  background: #f2f2f2;
  width: 300px;
  font-family:'Roboto', sans-serif;
  text-align: center;
  border: 1px solid rgba(0,0,0,.12);
  border-radius: 8px;
}

#setup-form > h2 {
  margin: auto;
  width: 270px;
  font-size: 22px;
  padding-top: 5px;
  padding-bottom: 10px;
  color: #004d66;
  border-bottom: 1px solid #666;
}

#setup-form > h3 {
  margin-top: 14px;
  margin-bottom: 7px;
  font-size: 18px;
}

#setup-form label {
  font-size: 15px;
}

#setup-form input[type="submit"]{
  padding: 8px 11px;
  margin-top: 15px;
  background: #006080;
  color: white;
  font-size: 16px;
  font-weight: 300;
  border-radius: 5px;
}

#setup-form input[type="submit"]:hover{
  background: #004d66;
}

.thinking-text {
  color: #004d66;
  background: #f2f2f2;
  padding: 10px 15px;
  border-radius: 5px;
  border: 1px solid rgba(0,0,0,.12);
  position: relative;
  top: -250px;
  left: 400px;
}

.game-over-container {
  background: #f2f2f2;
  text-align: center;
  padding: 15px;
  border-radius: 7px;
  border: 1px solid rgba(0,0,0,.12);
}

.game-over-container > h3 {
  font-size: 22px;
  color: #004d66;
  padding-bottom: 5px;
  border-bottom: 1px solid #666;
}

.game-over-container > p {
  margin: 10px;
}

.game-over-container > button {
  padding: 5px 11px;
  background: #006080;
  color: white;
  font-size: 14px;
  font-weight: 300;
  border-radius: 5px;
  margin: 0 7px;
}

.game-over-container > button:hover {
  background: #004d66;
}

#about-container {
  background: #f2f2f2;
  width: 500px;
  padding: 25px 30px;
  border-radius: 7px;
  border: 1px solid rgba(0,0,0,.12);
}

#about-container > h3 {
  font-size: 22px;
  color: #004d66;
  padding-left: 5px;
  padding-bottom: 7px;
  border-bottom: 1px solid #666;
}

#about-container > p {
  padding-top: 12px;
}

#about-container a {
  color: #004d66;
}

#about-container a:hover {
  text-decoration: underline;
}

.highlight {
  color: #004d66;
}

#close-button {
  color: #666;
  float: right;
  position: relative;
  top: -15px;
  right: -15px;
}

#close-button:hover {
  cursor: pointer;
  color: black;
}

.option-div {
  width: 270px;
  margin: auto;
  display: flex;
  justify-content: center;
}

.option-div > div {
  margin: 0 7px;
}

footer {
  width: 100%;
  height:0;
  position: relative;
  top: -30px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

footer i {
  color: #ffe2d3;
  margin: 0 0 5px 25px;
}

